add responsive site-header

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
 </head>
 <body>
   <!-- HEADER -->
-  <header class="site-header site-header--open">
+  <header class="site-header ">
     <div class=" site-header__container container">
-
       <!-- LOGO -->
       <a class="site-header__logo logo" href="index.html">
-        <img class="logo__img" src="./img/logo.svg" alt="site-header-logo" width="165" height="30">
+        <img class="logo__img" src="./img/logo-img.svg" alt="site-header-logo" width="165" height="30">
+        <span class="logo__text">Product</span>
       </a>
       
      <!-- TOGGLER -->
