--- a/index.html
+++ b/index.html
@@ -138,6 +138,34 @@
             </div>
           </div>
         </section>
+          
+
+    
+      <!-- MANAGMENT-CONTENT -->
+      <section class="managment">
+        <div class="managment__container container">
+           <div class="managment__content">
+            <div class="managment__contenet-top">
+              <h3 class="managment__content-top--heading">Effortless Validation for</h3>
+              <h2 class="managment__content-top--text">Management</h2>
+            </div>
+            <div class="managment__content-bottom">
+              <div class="managment__content-bottom--wrapper">
+                <h3 class="managment__content-bottom--title">Accessory makers</h3>
+                <p class="managment__content-bottom--text">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+              </div>
+              <div class="managment__content-bottom--wrapper">
+                <h3 class="managment__content-bottom--title">Accessory makers</h3>
+                <p class="managment__content-bottom--text">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+              </div>
+            </div>
+           </div>
+
+           <div class="managment__img-wrapper">
+            <img src="./img/amico-removebg-preview.png" alt="">
+           </div>
+        </div>
+      </section>
 
       </main>
       <script src="./js/main.js"></script>
