Add optimisation and process

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
           
           <!-- HERO-IMG -->
           <div class="hero__img-wrapper">
-            <img class="hero__img" src="./img/hero-body-img-removebg-preview.png" alt="hero-img" width="" srcset="img/hero-body-img-removebg-preview.png 1x , img/hero-body-img-removebg-preview@2x.png 2x">
+            <img class="hero__img" src="./img/he" alt="hero-img" width="">
           </div>
         </div>
       </section>
@@ -181,6 +181,7 @@
                 <h2 class="customer__content--heading">Customer Support</h2>
                 <p class="customer__content--text">The Myspace page defines the individual, his or her characteristics, traits, personal choices and the overall personality of the person. </p>
               </div>
+
               <!-- CUSTOMER-INFO -->
               <div class="customer__info">
                 <div class="customer__info--wrapper">
@@ -208,6 +209,82 @@
 
 
         <!-- OPTIMISATION -->
+         <section class="optimisation">
+           <div class=" optimisation__container container">
+            <!-- OPTIMISATION-INFO -->
+            <div class="optimisation__content">
+                <div class="optisisation__content-top customer__content-top">
+                  <h3 class="optimisation__content--deck  customer__content--deck">Optimisation for</h3>
+                  <h2 class="optimisation__content--deck customer__content--heading">Collaborative</h2>
+                  <p class="optimisation__content--deck customer__content--text">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior.  </p>
+                </div>
+                <!-- OPTIMISATION-BOTTOM -->
+                <div class="optimisation__content-bottom managment__content-bottom">
+                  <div class="optimisation__content-bottom--wrapper managment__content-bottom--wrapper">
+                    <h3 class="optimisation__content-bottom--title  managment__content-bottom--title">Accessory makers</h3>
+                    <p class="optimisation__content-bottom--text managment__content-bottom--text">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                  </div>
+                  <div class="optimisation__content-bottom--wrapper managment__content-bottom--wrapper">
+                    <h3 class=" optimisation__content-bottom--title  managment__content-bottom--title">Alterationists</h3>
+                    <p class="optimisation__content-bottom--text managment__content-bottom--text">If you are looking for a new way to promote your business that won’t cost you more money, </p>
+                  </div>
+                </div>
+            </div>
+             <!-- OPTIMISATION-IMG -->
+            <img class="optimisation__img" src="./img/optimisation-bg-removebg-preview.png" alt="" width="541" height="451">
+           </div>
+         </section>
+
+
+         <!-- PROCESS -->
+         <section class="process">
+          <div class=" process__container container">
+            <div class="process__content-top">
+               <h2 class="process__content-top--heading">Quick & Easy Process</h2>
+               <p class="process__content-top--text">Do you require some help for your project: Conception workshop,
+                prototyping, marketing strategy, landing page, Ux/UI?</p>
+            </div>
+            <!-- PROCESS-INFO -->
+            <div class="process__info">
+
+              <div class="process__info-container">
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="process__button-wrapper">
+                <a class="button" href="">Contact our expert</a>
+              </div>
+            </div>
+          </div>
+         </section>
+
+
       </main>
       <script src="./js/main.js"></script>
     </body>
