add hero auth media

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             
             <!-- HERO-AUTH -->
             <div class="hero__auth">
-              <a type="button hero__auth-button hero__auth-button--get" class="button" href="#">Get started</a>
+              <a type="button" class="button hero__button-auth" href="#">Get started</a>
               <button class="hero__auth-button--video" >
                 <span class="hero__auth-button--inner">
                   <span class="hero__auth-button--img">
@@ -80,7 +80,7 @@
           
           <!-- HERO-IMG -->
           <div class="hero__img-wrapper">
-            <img class="hero__img" src="./img/hero-bg-removebg-preview.png" alt="" width="600" height="555">
+            <img class="hero__img" src="./img/hero-bg-removebg-preview.png" alt="" width="600" height="">
           </div>
         </div>
       </section>
