add optimisation styles

--- a/index.html
+++ b/index.html
@@ -218,10 +218,82 @@
 
 
         <!-- OPTIMISATION -->
-      
+        <section class="optimisation"> 
+           <div class=" optimisation__container container">
+                <!-- OPTIMISATION__INFO -->
+                <div class="optimisation__info">
+                  <div class="optimisation__info_top">
+                    <h3 class="optimisation__info-top--title">Optimisation for</h3>
+                    <h2 class="optimisation__info-top-heading">Collaborative</h2>
+                    <p class="optimisation__info-top--text">Few would argue that, despite the advancements of feminism over the past three decades, women still face a double standard when it comes to their behavior. </p>
+                  </div>
+                  <!-- OPTIMISATION--BOTTOM -->
+                  <div class="optimisation__bottom">
+                      <div class="optimisation__bottom-info">
+                        <h3 class="optimisation__bottom-info-title">Accessory makers</h3>
+                        <p class="optimisation__bottom-info--text">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                      </div>
+                      <div class="optimisation__bottom-info">
+                        <h3 class="optimisation__bottom-info-title">Accessory makers</h3>
+                        <p class="optimisation__bottom-info--text">While most people enjoy casino gambling, sports betting, lottery and bingo playing for the fun</p>
+                      </div>
+                  </div>
+                </div>
+
+                <div class="optimisation__img-wrapper">
+                  <img class="optimisation__img" src="./img/optimisation-bg-removebg-preview.png" alt="" width="541" height="451">
+                </div>
+           </div>
+        </section>
 
 
          <!-- PROCESS -->
+         <section class="process">
+          <div class=" process__container container">
+            <div class="process__content-top">
+               <h2 class="process__content-top--heading">Quick & Easy Process</h2>
+               <p class="process__content-top--text">Do you require some help for your project: Conception workshop,
+                prototyping, marketing strategy, landing page, Ux/UI?</p>
+            </div>
+            <!-- PROCESS-INFO -->
+            <div class="process__info">
+  
+              <div class="process__info-container">
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+  
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+  
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+  
+                <div class="process__info-card process__info-card--item">
+                  <img class="process__info-img"  src="./img/Avator.png" alt="" width="98px" height="98px">
+                  <div class="process__info-card--msg">
+                    <p class="process__info-card--text">I can take care of your pitch</p>
+                  </div>
+                </div>
+              </div>
+  
+              <div class="process__button-wrapper">
+                <a class="button" href="">Contact our expert</a>
+              </div>
+            </div>
+          </div>
+         </section>
          
 
 
