--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <ul class="sitenav__list">
             <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="#">Product</a></li>
             <li class="sitenav__item"><a class="sitenav__link" href="#">Customers</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Pricing</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="./pricing.html">Pricing</a></li>
             <li class="sitenav__item"><a class="sitenav__link" href="#">Resources</a></li>
           </ul>
         </nav>
