--- a/pricing.html
+++ b/pricing.html
@@ -33,9 +33,9 @@
             <div class="site-header__sitenav-wrapper">
                 <nav class="site-header__sitenav sitenav">
                     <ul class="sitenav__list">
-                        <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="#">Product</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="./index.html">Product</a></li>
                         <li class="sitenav__item"><a class="sitenav__link" href="#">Customers</a></li>
-                        <li class="sitenav__item"><a class="sitenav__link" href="#">Pricing</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link" href="./pricing.html">Pricing</a></li>
                         <li class="sitenav__item"><a class="sitenav__link" href="#">Resources</a></li>
                     </ul>
                 </nav>
