Add customer link

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <nav class="site-header__sitenav sitenav">
           <ul class="sitenav__list">
             <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="#">Product</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Customers</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="./customer.html">Customers</a></li>
             <li class="sitenav__item"><a class="sitenav__link" href="./pricing.html">Pricing</a></li>
             <li class="sitenav__item"><a class="sitenav__link" href="#">Resources</a></li>
           </ul>
