Add finish loyiha

--- a/index.html
+++ b/index.html
@@ -365,7 +365,7 @@
                   <p class="pricing__plan-text">Brief price description</p>
                   <div class="pricing__plan-price">
                     
-                    <span class="pricing__plan-number">5</span>
+                    <span class="pricing__plan-standart">5</span>
                     <span class="pricing__plan-currensy"><sup>$</sup></span>
                     <span class="pricing__plan-date">Per / month</span>
                   </div>
