--- a/customer.html
+++ b/customer.html
@@ -34,10 +34,10 @@
       <div class="site-header__sitenav-wrapper">
         <nav class="site-header__sitenav sitenav">
           <ul class="sitenav__list">
-            <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="#">Product</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Customers</a></li>
+            <li class="sitenav__item"><a class="sitenav__link sitenav__link-active" href="./index.html">Product</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="./customer.html">Customers</a></li>
             <li class="sitenav__item"><a class="sitenav__link" href="./pricing.html">Pricing</a></li>
-            <li class="sitenav__item"><a class="sitenav__link" href="#">Resources</a></li>
+            <li class="sitenav__item"><a class="sitenav__link" href="./resources.html">Resources</a></li>
           </ul>
         </nav>
         <!-- SITE-HEADER-AUTH -->
