Add finish styles

--- a/pricing.html
+++ b/pricing.html
@@ -88,7 +88,7 @@
                         <div class="pricing__plan-price">
                             
                             <span class=" pricing__plan-standart">5</span>
-                            <span class="pricing__plan-currensy"><sup>$</sup></span>
+                            <span class="pricing__plan-currensy pricing__plan-currensy-standard"><sup>$</sup></span>
                             <span class="pricing__plan-date">Per / month</span>
                         </div>
                         <ul class="pricing__plan-features  pricing__plan-standard">
